--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-4">
-            <h3>UFO Sightings: Fact or Fancy? 
+            <h3>UFO Sightings: Fact or Fantasy? 
               <br><small>Ufologists Weigh In</small></br>
             </h3>
           </div>
@@ -49,14 +49,27 @@
             <form class="bg-dark">
               <p>Filter Search</p>
               <ul class="[tag.]{style="font-family: inherit; font-size: 1rem;"}">
-                <li class="[tag.]{style="font-family: inherit; font-size: 1rem;"}">
-                  <label for="date">Enter Date</label>
-                  <input type="text" placeholder="1/10/2010" id="datetime"> </input>
-                </li>
-                <ul>
-                  <button id="filter-btn" type="button" class="btn btn-dark">Filter Table</button>
-                </ul>
-                </li>         
+              <label for="date">Enter Date</label>
+              <input type="text" placeholder="1/10/2010" id="datetime"> </input>
+              </ul>
+              <ul>
+                <label for="date">Enter City</label>
+                <input type="text" placeholder="roswell" id="city"> </input>  
+              </ul>
+              <ul>
+                <label for="date">Enter State</label>
+                <input type="text" placeholder="ca" id="state"> </input>  
+              </ul>
+              <ul>
+                <label for="date">Enter Country</label>
+                <input type="text" placeholder="us" id="country"> </input>  
+              </ul>
+              <ul>
+                <label for="date">Enter Shape</label>
+                <input type="text" placeholder="circle" id="shape"> </input>  
+              </ul>
+              <ul>
+                <button id="filter-btn" type="button" class="btn btn-dark">Filter Table</button>
               </ul>
             </form>
           </div>
